[tool.poetry]
name = "pyxlander"
version = "0.2.0"
description = ""
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
pyxlander = "pyxlander.__main__:cli"

[tool.poetry.dependencies]
python = "^3.11"
twod = "^0.2.9"
pyxel = "^1.9.18"
typer = "^0.9.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
poethepoet = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
