[project]
name = "pyxlander"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "JnyJny", email = "erik.oshaughnessy@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "loguru>=0.7.3",
    "pyxel>=2.8.3",
    "twod>=0.3.1",
    "typer>=0.24.1",
]

[project.scripts]
pyxlander = "pyxlander.__main__:cli"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "poethepoet>=0.42.1",
    "ptest>=2.0.3",
]
